--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
